\newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, there are some additional system Rd macros available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'polyCub'}


\section{Changes in polyCub version 0.6.1 (2017-09-29)}{

  \itemize{
    \item The exported C-function \code{polyCub_iso()} \dots
    \itemize{
      \item did not handle its \code{stop_on_error} argument correctly
      (it would always stop on error).
      \item now detects non-finite \code{intrfr} function values
      and gives an informative error message (rather than just reporting
      \dQuote{abnormal termination of integration routine}).
    }
  }

}



\section{Changes in polyCub version 0.6.0 (2017-05-24)}{

  \itemize{
    \item Added full C-implementation of \code{polyCub.iso()},
    which is exposed as \code{"polyCub_iso"} for use by other
    \R packages (notably future versions of \CRANpkg{surveillance})
    via \samp{LinkingTo: polyCub} and \samp{#include <polyCubAPI.h>}.
    
    \item Accommodate CRAN checks:
    add missing import from \pkg{graphics},
    register native routines and disable symbol search
  }

}



\section{Changes in polyCub version 0.5-2 (2015-02-25)}{

  \itemize{
    \item \code{polyCub.midpoint()} works directly with input
    polygons of classes \code{"gpc.poly"} and \code{"SpatialPolygons"},
    since package \pkg{polyCub} now registers corresponding
    \code{as.owin}-methods.
    
    \item \code{polyCub.exact.Gauss()} did not work if the
    \code{tristrip} of the transformed input polygon contained
    degenerate triangles (spotted by Ignacio Quintero).

    \item Line integration in \code{polyCub.iso()} could break due to
    division by zero if the \code{center} point was part of the polygon
    boundary.
  }
  
}


