@@ -1,9 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(as.owin,Polygon)
-S3method(as.owin,Polygons)
-S3method(as.owin,SpatialPolygons)
-S3method(as.owin,gpc.poly)
 S3method(xylist,Polygon)
 S3method(xylist,Polygons)
 S3method(xylist,SpatialPolygons)
@@ -11,6 +7,10 @@ S3method(xylist,default)
 S3method(xylist,gpc.poly)
 S3method(xylist,owin)
 export(.polyCub.iso)
+export(as.owin.Polygon)
+export(as.owin.Polygons)
+export(as.owin.SpatialPolygons)
+export(as.owin.gpc.poly)
 export(checkintrfr)
 export(circleCub.Gauss)
 export(gpc2owin)
@@ -36,15 +36,6 @@ importFrom(graphics,image)
 importFrom(graphics,lines)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(spatstat,as.im.function)
-importFrom(spatstat,as.owin)
-importFrom(spatstat,as.polygonal)
-importFrom(spatstat,integral.im)
-importFrom(spatstat,is.polygonal)
-importFrom(spatstat,owin)
-importFrom(spatstat,plot.im)
-importFrom(spatstat,plot.owin)
-importFrom(spatstat,summary.owin)
 importFrom(stats,cov2cor)
 importFrom(stats,dist)
 importFrom(stats,integrate)
