@@ -1,7 +1,7 @@
 ################################################################################
 ### Internal Functions
 ###
-### Copyright (C) 2009-2015 Sebastian Meyer
+### Copyright (C) 2009-2015,2017 Sebastian Meyer
 ###
 ### This file is part of the R package "polyCub",
 ### free software under the terms of the GNU General Public License, version 2,
@@ -61,9 +61,6 @@ isScalar <- function (x) {
 ##' @import methods
 ##' @import sp
 ##' @importFrom graphics polygon
-##' @importFrom spatstat plot.owin
-## CAVE: need to import plot.owin for compatibility with spatstat <1.33-0,
-##       since plot.owin was not registered as an S3-method for plot
 ## NOTE: we don't import graphics::plot since it is already imported via sp
 plot_polyregion <- function (polyregion, lwd=2, add=FALSE)
 {
@@ -78,6 +75,9 @@ plot_polyregion <- function (polyregion, lwd=2, add=FALSE)
             polyregion <- Polygons(list(polyregion), "ID")
         if (inherits(polyregion, "Polygons"))
             polyregion <- SpatialPolygons(list(polyregion))
+        if (inherits(polyregion, "owin"))
+            ## && ! "plot.owin" %in% getNamespaceInfo("spatstat", "S3methods")
+            plot <- spatstat::plot.owin  # spatstat <1.33-0 has no registration
         ## plot call which works for "SpatialPolygons" and "owin"
         plot(polyregion, lwd=lwd, axes=TRUE, main="", add=add)
     }
